# RaspZan

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEV_SETUP.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  api_docs.py  main.py
app/core/: config.py  error_handlers.py  errors.py  security.py  sessions.py
app/db/: legacy.py
app/dependencies/: auth.py
app/models/: __init__.py  classrooms.py  curriculum.py  departments.py  enums.py  groups.py  legacy.py  mixins.py  schedule.py  users.py
app/routers/: classrooms.py  curriculum.py  inventory.py  lookup.py  schedule.py
app/schemas/: errors.py  lookup.py  schedule.py
app/scripts/: seed_demo_schedule.py  seed_dev.py
app/services/: academic_year.py  excel_exports.py  lookup_query_service.py  pdf_exports.py  permissions.py  schedule_builder.py  schedule_entry_service.py  schedule_history_query_service.py  schedule_projection.py  schedule_query_service.py  (+1 more)
docs/: migration-plan.md
frontend/: index.html  package-lock.json  package.json
migrations/: README.md  env.py  script.py.mako
scripts/: inspect_legacy_db.py  migrate_legacy_data.py
tests/: test_api_errors.py  test_lookup_api.py  test_models_mapping.py  test_openapi_schedule_docs.py  test_schedule_change_audit_api.py  test_schedule_conflicts.py  test_schedule_entries_api.py  test_schedule_entries_update_api.py  test_schedule_entry_cancel.py  test_schedule_entry_service.py  test_schedule_history_api.py  test_schedule_permissions.py  test_schedule_query_api.py
(+32 files in other folders)
